PortalPackage/ Enrollment Rx Core/objects/Status_Tracking__c.object
<CustomObject>
    <description>ERx custom Object</description>
    <fields>
        <fullName>Advisor_Name__c</fullName>
        <description>Text field to be populated upon trigger with Contact or Enrollment Opp Owner &quot;name&quot;.</description>
        <label>Advisor Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applications_Complete__c</fullName>
        <label>Applications Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Status Tracking</relationshipLabel>
        <relationshipName>Status_Trackings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contacts_Completed__c</fullName>
        <description>ERx Custom Fields</description>
        <label>Contacts Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_Status__c</fullName>
        <formula>round ( CreatedDate -  Prior_Date__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Enrollment_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Enrollment_Opportunity__c</referenceTo>
        <relationshipLabel>Application Status Tracking</relationshipLabel>
        <relationshipName>Enrollment_Opp_Status_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Enrollments__c</fullName>
        <description>ERx Cutom Field</description>
        <label>Enrollments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interviews_Completed__c</fullName>
        <description>ERx Custom Field</description>
        <label>Interviews Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interviews_Scheduled__c</fullName>
        <description>ERx Custom Field</description>
        <label>Interviews Scheduled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous__c</fullName>
        <label>Previous</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prior_Date__c</fullName>
        <label>Prior Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Starts__c</fullName>
        <label>Starts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Updated__c</fullName>
        <label>Updated</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Status Tracking</label>
    <nameField>
        <displayFormat>T-{00000}</displayFormat>
        <label>Status Tracking</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Status Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>